crates/apollo-compiler/test_data/diagnostics/0049_duplicate_directive_argument_definition_names.txt
Error: the value `arg` is defined multiple times
   ╭─[0049_duplicate_directive_argument_definition_names.graphql:1:20]
   │
 1 │ directive @example(arg: Boolean, arg: Boolean) on FIELD
   │                    ──────┬─────  ──────┬─────  
   │                          ╰───────────────────── previous definition of `arg` here
   │                                        │       
   │                                        ╰─────── `arg` redefined here
   │ 
   │ Help: `arg` field must only be defined once in this input object definition.
───╯

